modifique card que ver

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ section ul li {
 .card__quever {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .card-quever {
@@ -248,7 +249,6 @@ p {
     padding-top: 0;
     margin: 60px;
     width: 267px;
-    height: ;
     line-height: 2.5;
     box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
     text-align: center;
