agregue texto real

--- a/scss/componentes/_img.scss
+++ b/scss/componentes/_img.scss
@@ -50,3 +50,11 @@
 	margin-bottom: 10px;
 	height: 2.5rem;
 }
+
+.imagen_sobremi{
+    display: flex;
+    justify-content: center;
+    img{
+        width: 25rem;
+    }
+}
