--- a/scss/componentes/_img.scss
+++ b/scss/componentes/_img.scss
@@ -37,6 +37,9 @@
     flex-wrap: wrap;
 	margin: 1%;
 	margin-left: 3%;
+    a {
+        text-decoration: none;
+        }
 	img {
 		width: 2rem;
 	}
