--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 #inicionav {
   font-weight: bold;
 }
@@ -136,6 +137,7 @@ footer {
   height: 10rem;
 }
 
+/* Boton de enviar mensaje en Contacto*/
 .boton_contacto {
   width: 15rem;
   height: 3.5em;
@@ -305,6 +307,7 @@ section article p {
   font-weight: bold;
 }
 
+/* Media queries para html guia de viaje */
 @media screen and (max-width: 1024px) {
   .gridguiadeviaje {
     display: flex;
@@ -319,11 +322,13 @@ section article p {
     grid-template-rows: repeat(4, 1fr);
   }
 }
+/* Media q para imagen en html de España*/
 @media screen and (max-width: 710px) {
   .madrid img {
     width: 90%;
   }
 }
+/* Media q para menu desplegable */
 @media screen and (max-width: 768px) {
   nav {
     justify-content: flex-start;
@@ -353,6 +358,7 @@ section article p {
     display: block;
   }
 }
+/* Media q para html Sobre mi*/
 @media screen and (min-width: 769px) {
   .sobremimobile {
     display: none;
@@ -374,11 +380,13 @@ section article p {
     margin-top: 30px;
   }
 }
+/* Media q para flecha en Que ver*/
 @media screen and (min-width: 930px) {
   .flecha_subir {
     display: none;
   }
 }
+/* Bootstrap en cartel de html Guia de viaje*/
 .guiadeviaje-boot {
   display: flex;
 }
