--- a/scss/view/_mediaqueries.scss
+++ b/scss/view/_mediaqueries.scss
@@ -1,3 +1,5 @@
+/* Media queries para html guia de viaje */
+
 @media screen and (max-width: 1024px) {
 	.gridguiadeviaje {
 		display: flex;
@@ -14,6 +16,8 @@
 	}
 }
 
+/* Media q para imagen en html de España*/
+
 @media screen and (max-width: 710px) {
 	.madrid {
 		img {
@@ -21,6 +25,8 @@
 		}
 	}
 }
+
+/* Media q para menu desplegable */
 
 @media screen and (max-width: 768px) {
 	nav {
@@ -59,6 +65,8 @@
 	}
 }
 
+/* Media q para html Sobre mi*/
+
 @media screen and (min-width: 769px) {
 	.sobremimobile {
 		display: none;
@@ -81,6 +89,8 @@
 		margin-top: 30px;
 	}
 }
+
+/* Media q para flecha en Que ver*/
 
 @media screen and (min-width: 930px) {
 	.flecha_subir {
