--- a/scss/componentes/_img.scss
+++ b/scss/componentes/_img.scss
@@ -34,7 +34,7 @@
 .redes {
 	display: flex;
 	align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
 	margin: 1%;
 	margin-left: 3%;
     a {
