--- a/scss/style.css
+++ b/scss/style.css
@@ -205,7 +205,7 @@ footer {
 .redes {
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
   margin: 1%;
   margin-left: 3%;
 }
