--- a/scss/style.css
+++ b/scss/style.css
@@ -314,7 +314,7 @@ section article p {
   font-weight: bold;
 }
 
-/* Media queries para html guia de viaje */
+/* Media para guia de viaje */
 @media screen and (max-width: 1024px) {
   .gridguiadeviaje {
     display: flex;
@@ -329,21 +329,21 @@ section article p {
     grid-template-rows: repeat(4, 1fr);
   }
 }
-/* Media q para imagen en html de España*/
+/* Media para imagen en España*/
 @media screen and (max-width: 710px) {
   .madrid img {
     width: 90%;
   }
 }
-/* Media q para menu desplegable */
 @media screen and (max-width: 768px) {
+  /* Media para menu desplegable */
   nav {
     display: block;
     justify-content: flex-start;
     padding-bottom: 0;
     position: absolute;
     width: 100%;
-    padding: 2%;
+    padding: 0;
     z-index: 1;
   }
   nav ul {
@@ -362,11 +362,12 @@ section article p {
   #icon {
     display: block;
     width: 42px;
+    margin-left: 4%;
   }
   #checkbox:checked ~ ul {
     display: block;
   }
-  /* Media q para html Sobre mi*/
+  /* Media para Sobre mi*/
   .sobremi {
     display: none;
   }
@@ -382,13 +383,13 @@ section article p {
     margin-top: 30px;
   }
 }
-/* Media q para html Sobre mi*/
+/* Media para Sobre mi*/
 @media screen and (min-width: 769px) {
   .sobremimobile {
     display: none;
   }
 }
-/* Media q para flecha en Que ver*/
+/* Media para flecha en Que ver*/
 @media screen and (min-width: 930px) {
   .flecha_subir {
     display: none;
