--- a/scss/view/_mediaqueries.scss
+++ b/scss/view/_mediaqueries.scss
@@ -29,6 +29,13 @@
 
 
 @media screen and (max-width: 768px) {
+
+	.banner{
+		margin-top: 10%;
+	}
+	h2{
+		margin-top: 10%;
+	}
 	/* Media para menu desplegable */
 	nav {
 		display: block;
