--- a/scss/style.css
+++ b/scss/style.css
@@ -33,7 +33,7 @@
 
 h2 {
   color: #FF6086;
-  margin-top: 13%;
+  margin-top: 2%;
   margin-left: 5%;
   font-size: 2rem;
   font-variant: small-caps;
@@ -188,7 +188,7 @@ footer {
 }
 
 .banner {
-  margin-top: 15%;
+  margin-top: 3%;
   width: 100%;
   height: 300;
 }
@@ -336,6 +336,12 @@ section article p {
   }
 }
 @media screen and (max-width: 768px) {
+  .banner {
+    margin-top: 10%;
+  }
+  h2 {
+    margin-top: 10%;
+  }
   /* Media para menu desplegable */
   nav {
     display: block;
